# Qt-Banking-System

./: manual.txt  users.json
Banking_System_Client/: CMakeLists.txt  client.cpp  client.h  main.cpp  manager_client.cpp  manager_client.h
Banking_System_Server/: CMakeLists.txt  databasehandler.cpp  databasehandler.h  main.cpp  requestHandler.cpp  requestHandler.h  server.cpp  server.h  thread.cpp  thread.h
